--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/apiClientSidebarTabs/collectionsList/collectionsList.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/apiClientSidebarTabs/collectionsList/collectionsList.scss
@@ -1,5 +1,7 @@
 .collections-list-container {
   width: 100%;
+  height: 100%;
+  padding-bottom: 50px;
 
   .collections-list-header {
     display: flex;
